# parking-spot-monitoring

./: .env.example  .gitignore  Dockerfile  PORTAINER_DEPLOYMENT.md  README.md  docker-compose.yml  export-image.ps1  portainer-stack.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: build.yml
config/: config.yaml  config.yaml.example  spots.example.json  spots.json
src/config_tool/: __init__.py  gui.py  snapshot_capture.py
src/parking_monitor/: __init__.py  config.py  main.py  metrics.py
src/parking_monitor/api/: __init__.py  router.py  schemas.py
src/parking_monitor/calibration/: __init__.py  auto_calibrator.py  drift_detector.py
src/parking_monitor/camera/: __init__.py  unifi_protect.py
src/parking_monitor/detection/: __init__.py  region_overlap.py  yolo_detector.py
src/parking_monitor/state/: __init__.py  models.py  spot_manager.py
